--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // run code below in the browser
     // const category = document.querySelector(".mw-category");
     // const links = Array.from(category.querySelectorAll('a'));
     // const de = links
@@ -82,6 +83,8 @@
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
+    const transportation = data.reduce((obj, item) => { if (!obj[item]) { obj[item] = 0 } obj[item]++; return obj; }, {});
+    console.table(transportation);
   </script>
 </body>
 
