--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }, 0);
 
     // 5. Sort the inventors by years lived
-    const oldest = inventors.sort(function (a, b) {
+    const oldest = inventors.sort((a, b) => {
       const lastGuy = a.passed - a.year;
       const nextGuy = b.passed - b.year;
       return lastGuy > nextGuy ? -1 : 1;
@@ -65,6 +65,7 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
     // run code below in the browser
+
     // const category = document.querySelector(".mw-category");
     // const links = Array.from(category.querySelectorAll('a'));
     // const de = links
@@ -84,7 +85,6 @@
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
     const transportation = data.reduce((obj, item) => { if (!obj[item]) { obj[item] = 0 } obj[item]++; return obj; }, {});
-    console.table(transportation);
   </script>
 </body>
 
